<resources>
    <string name="app_name" translatable="false">MoveOn</string>

    <!-- Menu -->
    <string name="menu_item_snapshot">Snapshot</string>
    <string name="menu_item_exit">Exit</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_map">Map</string>
    <string name="menu_item_workplace">Home</string>

    <!-- Workplace fragment -->
    <string name="statistics_result">Your result</string>
    <string name="statistics_places">"Count of visited places"</string>
    <string name="workplace_editcountries">My countries</string>
    <string name="statistics_result1">%1$s countries</string>
    <string name="statistics_result2">" %1$.2f %% of the world"</string>
    <string name="statistics_result3">"%1$s "</string>
    <string name="statistics_level">"Level %1$s"</string>

    <!-- Countries fragment -->
    <string name="image_desc_country_flag">Country flag</string>

    <!-- Country fragment -->
    <string name="place_name">Visited place in the country</string>
    <string name="place_didnt_find">Place LatLng haven\'t found</string>
    <string name="place_error_occured">An error occurred:</string>

    <!-- Map fragment -->
    <string name="switch_map">Show visited places</string>

    <!-- Settings fragment -->
    <string name="bt_create_backup">Create backup</string>
    <string name="message_restore_backup_success">Backup is restored successfully</string>
    <string name="bt_restore_backup">Restore backup</string>
    <string name="app_version">Version %1$s</string>

    <!-- Content descriptions -->
    <string name="cont_descr_map_animation" translatable="false">Map animation</string>
    <string name="cont_descr_rv_places" translatable="false">Recycler</string>
    <string name="cont_descr_cb_check" translatable="false">Check</string>
    <string name="menu_item_back" translatable="false">Back</string>

    <!-- Messages -->
    <string name="error_message_internet_unavailable">"Internet unavailable"</string>

    <!-- Permissions -->
    <string name="permission_not_granted_text">Permission not granted</string>
    <string name="permission_explanation_read_storage_text">To continue grant access to read an external storage, please</string>
    <string name="permission_dialog_denied_read_storage_text">This feature is not available without reading an external storage permissions. Open app settings?</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">Cancel</string>

</resources>