<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/workplaceFragment"
        android:orderInCategory="1"
        android:title="@string/menu_item_workplace"
        android:icon="@drawable/baseline_home_white_24"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/mainmenu_action_back"
        android:orderInCategory="2"
        android:title="@string/menu_item_back"
        android:icon="@drawable/baseline_arrow_back_white_24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/mapFragment"
        android:orderInCategory="3"
        android:title="@string/menu_item_map"
        android:icon="@drawable/baseline_map_white_24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/settingsFragment"
        android:orderInCategory="4"
        android:title="@string/menu_item_settings"
        android:icon="@drawable/baseline_settings_white_24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/mainmenu_action_exit"
        android:orderInCategory="5"
        android:title="@string/menu_item_exit"
        android:icon="@drawable/baseline_exit_to_app_white_24"
        app:showAsAction="always"/>

</menu>