<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_50"
        android:layout_marginTop="@dimen/margin_50"
        android:layout_marginEnd="@dimen/margin_50"
        android:minHeight="@dimen/min_height_200"
        app:cardBackgroundColor="@android:color/transparent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/statistics_result"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_h6" />

            <TextView
                android:id="@+id/tv_count_statistics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_h4" />

            <TextView
                android:id="@+id/tv_percent_statistics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_subtitle1" />

            <TextView
                android:id="@+id/tv_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:layout_marginTop="@dimen/margin_120"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_subtitle1" />

            <ProgressBar
                android:id="@+id/progressBar_level"
                style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_100"
                android:layout_marginEnd="@dimen/margin_100"
                android:max="19"
                android:minHeight="@dimen/min_height_20" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_50"
        android:layout_marginTop="@dimen/margin_50"
        android:layout_marginEnd="@dimen/margin_50"
        android:minHeight="@dimen/min_height_100"
        app:cardBackgroundColor="@android:color/transparent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/statistics_places"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_h6" />

            <TextView
                android:id="@+id/tv_places_statistics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:layout_marginTop="@dimen/margin_100"
                android:layout_marginBottom="@dimen/margin_100"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_h4" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_rawRes="@raw/animation_jorney"
        android:scaleType="centerCrop"
        android:layout_gravity="center_horizontal"
        app:lottie_loop="false"
        app:lottie_autoPlay="false"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_edit_countries"
        style="@style/moveOnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/workplace_editcountries" />

</LinearLayout>